# aws-iot-core-credential-provider-session-helper

./: .buildinfo  .envrc  .flake8  .gitallowed  .gitignore  .prettierrc.yaml  .tool-versions  README.md  advanced.html  codeofconduct.html  contributing.html  dev_notes.html  genindex.html  index.html  license.html  noxfile.py  objects.inv  py-modindex.html  pyproject.toml  reference.html  search.html  searchindex.js  usage.html
.doctrees/: advanced.doctree  codeofconduct.doctree  contributing.doctree  dev_notes.doctree  environment.pickle  index.doctree  license.doctree  reference.doctree  usage.doctree
.github/workflows/: constraints.txt  publish-docs.yml  release.yml  tests.yml
_sources/: index.md.txt  reference.md.txt  usage.md.txt
aws-iot-core-credential-provider-session-helper/: .gitignore  CONTRIBUTING.md  README.md  THIRD-PARTY-LICENSES.txt  mypy.ini  pyproject.toml
aws-iot-core-credential-provider-session-helper/.github/: secret_scanning.yml
aws-iot-core-credential-provider-session-helper/docker/hsm_linux/: aws_iot_core_credential_provider_session_helper-0.0.0-py3-none-any.whl  hsm_validate.py
aws-iot-core-credential-provider-session-helper/docs/: conf.py
aws-iot-core-credential-provider-session-helper/examples/softhsm/: README.md
aws-iot-core-credential-provider-session-helper/src/aws_iot_core_credential_provider_session_helper/: __init__.py
aws-iot-core-credential-provider-session-helper/tests/assets/: client_rsa2048.pem
docker/hsm_linux/: aws_iot_core_credential_provider_session_helper-0.0.0-py3-none-any.whl  awsiot_credentialhelper-0.0.0-py3-none-any.whl  entrypoint.sh  hsm_linux.dockerfile  hsm_validate.py
docs/: advanced.md  conf.py  dev_notes.md  reference.md  requirements.txt  usage.md
src/aws_iot_core_credential_provider_session_helper/: iot_core_credential_provider.py
src/awsiot_credential_helper/: boto3_session.py
src/awsiot_credentialhelper/: __init__.py  boto3_session.py
tests/: certificates.py  test_file_based_session.py  test_pkcs11_session.py
tests/assets/: client_ec256.key  client_ec256.pem  client_rsa2048.key  client_rsa2048.pem  new_client_rsa2048.key
