# Copyright Amazon.com, Inc. or its affiliates. All Rights Reserved.
# SPDX-License-Identifier: Apache-2.0
[tool.poetry]
name = "awsiot-credentialhelper"
version = "0.2.1"
description = "AWS IoT Core Credential Provider Session Helper"
authors = ["Gavin Adams <gavinaws@amazon.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/awslabs/aws-iot-core-credential-provider-session-helper"
repository = "https://github.com/awslabs/aws-iot-core-credential-provider-session-helper"
documentation = "https://aws-iot-core-credential-provider-session-helper.readthedocs.io"
classifiers = [
    "Development Status :: 4 - Beta",
]

[tool.poetry.urls]
Changelog = "https://github.com/awslabs/aws-iot-core-credential-provider-session-helper/releases"

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.20.27"
botocore = "^1.23.27"
awscrt = "^0.16.9"
typing-extensions = "^4.5.0"

[tool.poetry.dev-dependencies]
Pygments = ">=2.10.0"
black = ">=21.10b0"
coverage = {extras = ["toml"], version = ">=6.2"}
darglint = ">=1.8.1"
flake8 = ">=4.0.1"
flake8-bandit = ">=2.1.2"
flake8-bugbear = ">=21.9.2"
flake8-docstrings = ">=1.6.0"
flake8-rst-docstrings = ">=0.2.5"
furo = ">=2021.11.12"
isort = ">=5.10.1"
mypy = ">=0.930"
pep8-naming = ">=0.12.1"
pre-commit = ">=2.16.0"
pre-commit-hooks = ">=4.1.0"
pytest = ">=6.2.5"
pyupgrade = ">=2.29.1"
safety = ">=1.10.3"
sphinx = ">=4.3.2"
sphinx-autobuild = ">=2021.3.14"
sphinx-click = ">=3.0.2"
typeguard = ">=2.13.3"
xdoctest = {extras = ["colors"], version = ">=0.15.10"}
myst-parser = {version = ">=0.16.1"}

[tool.poetry.group.dev.dependencies]
pytest-httpserver = "^1.0.6"
trustme = "^0.9.0"
coverage-conditional-plugin = "^0.8.0"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
plugins = ["coverage_conditional_plugin"]
source = ["awsiot_credentialhelper", "tests"]

[tool.coverage.coverage_conditional_plugin.rules]
# Here we specify our pragma rules:
py-gte-38 = "sys_version_info >= (3, 8)"
os-not-linux = "not platform_system == 'linux'"

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = [
    # 3.11: Pending release of https://github.com/certifi/python-certifi/pull/199
    'ignore:path is deprecated. Use files\(\) instead.*:DeprecationWarning',
]
